modify FormService to return entire form object

--- a/src/templates/_components/fields/Form_input.twig
+++ b/src/templates/_components/fields/Form_input.twig
@@ -16,7 +16,7 @@
 {% import "_includes/forms" as forms %}
 
 {{ forms.selectizeField({
-        instructions: 'Select a form from the list below',
+        instructions: 'Select a form',
         options: options,
         id: name,
         name: name,
