--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -19,7 +19,7 @@
 
 {{ forms.textField({
     label: 'Hubspot Access Token',
-    instructions: 'Enter some setting here.',
+    instructions: 'Enter your Hubspot Access Token',
     id: 'hubspotApiKey',
     name: 'hubspotApiKey',
     value: settings['hubspotApiKey']})
