--- a/src/templates/_components/fields/Form_settings.twig
+++ b/src/templates/_components/fields/Form_settings.twig
@@ -17,10 +17,10 @@
 
 {% do view.registerAssetBundle("gsumpster\\hubspotfieldtype\\assetbundles\\hubspotfieldtype\\HubspotFieldtypeAsset") %}
 
-{{ forms.textField({
-    label: 'Some Attribute',
-    instructions: 'Enter some attribute here.',
-    id: 'someAttribute',
-    name: 'someAttribute',
-    value: field['someAttribute']})
+{{ forms.checkbox({
+    label: 'Disable form embed preview',
+    instructions: 'Enable this option to disable the ability to view the embedded Hubspot Form',
+    id: 'previewDisabled',
+    name: 'previewDisabled',
+    value: field['previewDisabled']})
 }}
