fix disable preview setting

--- a/src/templates/_components/fields/Form_settings.twig
+++ b/src/templates/_components/fields/Form_settings.twig
@@ -22,5 +22,5 @@
     instructions: 'Enable this option to disable the ability to view the embedded Hubspot Form',
     id: 'previewDisabled',
     name: 'previewDisabled',
-    value: field['previewDisabled']})
+    checked: settings['previewDisabled'] })
 }}
